kubernetes/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "bitcoin-kit"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "bitcoin-kit"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "bitcoin-kit"
    spec:
      containers:
        - name: "bitcoin-kit"
          image: "hemilabs/bitcoin-kit"
          imagePullPolicy: "IfNotPresent"
          resources:
            requests:
              memory: 64Mi
            limits:
              memory: 128Mi
          ports:
            - containerPort: 8080
